--- a/bronze_layer.ipynb
+++ b/bronze_layer.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "spark.conf.set(\n",
-    "    \"fs.azure.account.key.ecomadlsalyce.dfs.core.windows.net\", 'Z2POLXsOZpax9W5HfcPyuqarEUocsnJwL0RM4ZAmdpheapyUDT4fdSsCDKphRSAJuFIH9rh3YMEH+AStJlpJhA==')"
+    "    \"fs.azure.account.key.ecomadlsalyce.dfs.core.windows.net\", '')"
    ]
   },
   {
